--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,7 @@
             {% endif %}
             </ul>
             </div>
+            <span style="clear: both"></span>
         </div>
         
         <div id="main">
