initial layout works

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,7 @@
             {% endblock %}
             </ul>
             </div>
+            <span class="title">FoLiA Linguistic Annotation Tool</span>
             <div class="right">
             <ul>
             {% block topbar_right %}
