--- a/style/flat.css
+++ b/style/flat.css
@@ -2,6 +2,8 @@ body {
     font-family: Ubuntu, Verdana, sans-serif;
     font-size: 10pt;
     background: #cbd9de;
+    margin: 0px;
+    padding: 0px;
 }
 
 #topbar {
@@ -10,10 +12,12 @@ body {
     padding: 5px;
     background: black;
     color: white;
-    min-height: 64px;
+    min-height: 12pt;
+    text-align: center;
 }
 #topbar ul {
     margin: 0px;
+    padding: 0px;
 }
 #topbar li {
     display: inline;
@@ -21,8 +25,13 @@ body {
     padding-left: 5px;
     padding-right: 5px;
 }
-.right {
+#topbar .left {
+    float: left;
+    margin-left: 20px;
+}
+#topbar .right {
     float: right;
+    margin-right: 20px;
 }
 
 #topbar a {
@@ -37,8 +46,10 @@ body {
 }
 
 div.dialog {
+    margin-top: 200px;
     margin-left: auto;
     margin-right: auto;
+    width: 480px;
     padding: 10px;
     background: #ededed;
     color: #333;
@@ -49,20 +60,37 @@ div.dialog {
 div.dialog label {
     display: inline-block;
     font-weight: bold;
-    width: 120px;
+    width: 20%;
+    margin: 5px;
 }
 div.dialog input {
     display: inline-block;
-    width: 120px;
+    width: 70%;
     background: white;
     border: #30677c 1px solid;
     border-radius: 5px;
+    padding: 2px;
+    margin: 5px;
 }
-input.button {
+.button, div.dialog input.button {
     background: #2a2a2a;
     color: white;
     font-weight: bold;
     text-align: center;
     border: none;
     border-radius: 10px;
+    text-align: center;
+    padding: 5px;
+}
+div.error {
+    color: red;
+    font-weight: bold;
+    border: red dashed 1px;
+}
+div.buttoncontainer {
+    text-align: center;
+}
+span.title {
+    font-weight: bold;
+    text-align: center;
 }
