--- a/templates/login.html
+++ b/templates/login.html
@@ -2,6 +2,7 @@
 
 {% block main %}
 <div id="logindialog" class="dialog">
+    <h3>Log in</h3>
     {% if error %}
     <div class="error">{{ error }}</div>
     {% endif %}
