--- a/style/flat.css
+++ b/style/flat.css
@@ -96,3 +96,16 @@ span.title {
     font-weight: bold;
     text-align: center;
 }
+h3 {
+    border-bottom: #30677c 1px solid;
+    color: #30677c;
+}
+ul#doclist {
+    border: #30677c 1px solid;
+    border-radius: 5px;
+    padding: 2px;
+    margin: 5px;
+    background: #2a2a2a;
+    color: white;
+    min-height: 50px;
+}
