--- a/style/flat.css
+++ b/style/flat.css
@@ -118,8 +118,22 @@ a {
 a:hover {
     text-decoration: underline;
 }
-
-//Hide all FoLiA elements initially, editor has to explicitly make the desired items visibile
+#topbar nav ul ul {
+    display: none;
+    margin: 0px;
+    padding: 0px;
+    opacity: 0.9;
+}
+#topbar nav ul li:hover > ul {
+    display: block;
+}
+#topbar nav li li {
+    display: inline-block;
+    list-style-type: none;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+//Hide all FoLiA elements initially, editor has to explicitly make the desired elements visibile
 .F {
     display: none;
 }
