--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
                 <ul>
                     {% if docid %}
                         {% for mode, modename in modes %}
-                            <li><a href="/{{ mode }}/{{ docid }}/">{{ modename }}</li>
+                        <li><a href="/{{ mode }}/{{ docid }}/">{{ modename }}</a></li>
                         {% endfor %}
                     {% endif %}
                     {% block topbar_left %}
