--- a/modes/viewer/templates/viewer.html
+++ b/modes/viewer/templates/viewer.html
@@ -1,5 +1,17 @@
 {% extends "base.html" %}
 
+{% block menu %}
+<li>Views
+<ul>
+    <li><a href="javascript:setview('n')">Normal</a></li>
+    <li><a href="javascript:setview('p')">Paragraphs</a></li>
+    <li><a href="javascript:setview('s')">Sentences</a></li>
+    <li><a href="javascript:setview('w')">Tokens</a></li>
+</ul>
+</li>
+
+{% endblock %}
+
 {% block main %}
 <div id="document">
 {{ dochtml|safe }}
