--- a/modes/viewer/templates/viewer.html
+++ b/modes/viewer/templates/viewer.html
@@ -3,7 +3,7 @@
 {% block menu %}
 <li>Views
 <ul>
-    <li><a href="javascript:setview('n')">Normal</a></li>
+    <li><a href="javascript:setview('deepest')">Normal</a></li>
     <li><a href="javascript:setview('p')">Paragraphs</a></li>
     <li><a href="javascript:setview('s')">Sentences</a></li>
     <li><a href="javascript:setview('w')">Tokens</a></li>
