--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
         <script type="text/javascript" src="/style/jquery-1.10.2.min.js"></script>
         <link rel="StyleSheet" href="/style/flat.css" type="text/css" />
         <script type="text/javascript" src="/style/flat.js"></script> 
-        {% for m in modes %}
+        {% for m,_ in modes %}
             <link rel="StyleSheet" href="/style/flat.{{ m }}.css" type="text/css" />
             <script type="text/javascript" src="/style/flat.{{ m }}.js"></script> 
         {% endfor %}
