--- a/templates/base.html
+++ b/templates/base.html
@@ -60,6 +60,8 @@
        
         <div id="toolbox">
         </div>
+        <div id="info">
+        </div>
 
         <div id="main">
             {% block main %}
