--- a/modes/viewer/templates/viewer.html
+++ b/modes/viewer/templates/viewer.html
@@ -1,12 +1,15 @@
 {% extends "base.html" %}
 
 {% block menu %}
-<li>Views
-<ul>
-    <li><a href="javascript:setview('deepest')">Normal</a></li>
-    <li><a href="javascript:setview('p')">Paragraphs</a></li>
-    <li><a href="javascript:setview('s')">Sentences</a></li>
-    <li><a href="javascript:setview('w')">Tokens</a></li>
+<li>Structure View
+<ul id="viewsmenu">
+    <li id="views_deepest"><a href="javascript:setview('deepest')">Normal</a></li>
+    <li id="views_p"><a href="javascript:setview('p')">Paragraphs</a></li>
+    <li id="views_s"><a href="javascript:setview('s')">Sentences</a></li>
+    <li id="views_w"><a href="javascript:setview('w')">Tokens</a></li>
+</ul>
+<li>Annotation View
+<ul id="annotationsviewmenu">
 </ul>
 </li>
 
