--- a/modes/viewer/templates/viewer.html
+++ b/modes/viewer/templates/viewer.html
@@ -11,6 +11,9 @@
 <li>Annotation View
 <ul id="annotationsviewmenu">
 </ul>
+<li>Annotation Focus
+<ul id="annotationsfocusmenu">
+</ul>
 </li>
 
 {% endblock %}
