--- a/style/flat.css
+++ b/style/flat.css
@@ -130,12 +130,12 @@ a:hover {
 }
 #topbar nav ul li:hover > ul {
     position: absolute;
-    width: 320px;
+    min-width: 160px;
     display: block;
     background: black;
     padding: 5px;
     padding-left: 10px;
-    opacity: 0.75;
+    opacity: 0.9;
 }
 #topbar nav ul li:hover > ul li {
     display: block;
@@ -171,6 +171,12 @@ span.lbl {
     margin: 0;
 }
 
+div.focustype span.lbl {
+    background: #dcc6da;
+}
+div.related span.lbl {
+    background: #8c4a87;
+}
 div.hover span.lbl {
     background: #b9d8d9;
 }
