--- a/modes/editor/templates/editor.html
+++ b/modes/editor/templates/editor.html
@@ -5,8 +5,8 @@
 {% endblock %}
 
 {% block dialogs %}
-<div id="info">
-</div>
+<div id="info"></div>
+<div id="editor"></div>
 {% endblock %}
 
 {% block main %}
