--- a/templates/base.html
+++ b/templates/base.html
@@ -60,11 +60,10 @@
             </div>
             <span style="clear: both"></span>
         </div>
-       
-        <div id="toolbox">
-        </div>
-        <div id="info">
-        </div>
+      
+
+        {% block dialogs %}
+        {% endblock %}
 
         <div id="main">
             {% block main %}
