--- a/modes/editor/templates/editor.html
+++ b/modes/editor/templates/editor.html
@@ -6,7 +6,9 @@
 
 {% block dialogs %}
 <div id="info"></div>
-<div id="editor"></div>
+<div id="editor">
+    <div class="body">
+    </div>
 {% endblock %}
 
 {% block main %}
