--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
         <meta name="author" content="Maarten van Gompel" />
         <title>FoLiA Linguistic Annotation Tool</title>
         <script type="text/javascript" src="/style/jquery-1.10.2.min.js"></script>
+        <script type="text/javascript" src="/style/jquery-ui.min.js"></script>
         <link rel="StyleSheet" href="/style/flat.css" type="text/css" />
         <script type="text/javascript" src="/style/flat.js"></script> 
         {% for m,_ in modes %}
