--- a/style/flat.css
+++ b/style/flat.css
@@ -175,4 +175,17 @@ nav ul ul li.on {
     min-width: 480px;
     min-height: 480px;
 }
-
+#wait {
+    position: fixed;
+    display: none;
+    background: black;
+    width: 100%;
+    min-width: 100%;
+    height: 100%;
+    min-height: 100%;
+    opacity: 0.8;
+    text-align: center;
+    padding-top: 200px;
+    left: 0px;
+    top: 0px;
+}
