--- a/modes/editor/templates/editor.html
+++ b/modes/editor/templates/editor.html
@@ -22,8 +22,8 @@
         <span id="editortargets">Targets:
         <select id="editortargetlist">
         </select>
-        <button id="editorremovetarget">-</button></span>
-    <button id="editorselecttarget">Select&gt;</button></span>
+        <button id="editorselecttarget">Select&gt;</button>
+        </span>
     </div>
     <div class="buttoncontainer">
         <button id="editorsubmit">Ok</button>
