--- a/modes/editor/templates/editor.html
+++ b/modes/editor/templates/editor.html
@@ -14,7 +14,7 @@
     <div class="body">
     </div>
     <div class="buttoncontainer">
-        <span id="editoraddfields">More?
+        <span id="editoraddfields">New:
         <select id="editoraddablefields">
         </select>
         <button id="editoraddfield">+</button></span>
