--- a/style/flat.css
+++ b/style/flat.css
@@ -100,6 +100,7 @@ div.buttoncontainer {
 span.title {
     font-weight: bold;
     text-align: center;
+    color: #cbd9de;
 }
 h3 {
     border-bottom: #30677c 1px solid;
