--- a/modes/editor/templates/editor.html
+++ b/modes/editor/templates/editor.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block dialogs %}
+<div id="legend"></div>
 <div id="info"></div>
 <div id="editor">
     <div id="editorheader">
