--- a/modes/viewer/templates/viewer.html
+++ b/modes/viewer/templates/viewer.html
@@ -5,8 +5,8 @@
 {% endblock %}
 
 {% block dialogs %}
-<div id="info">
-</div>
+<div id="legend"></div>
+<div id="info"></div>
 {% endblock %}
 
 {% block main %}
