--- a/modes/editor/templates/editor.html
+++ b/modes/editor/templates/editor.html
@@ -1,5 +1,11 @@
 {% extends "base.html" %}
 
+{% block head %}
+<!-- dependencies -->
+<link rel="StyleSheet" href="/style/flat.viewer.css" type="text/css" />
+<script type="text/javascript" src="/style/flat.viewer.js"></script> 
+{% endblock %}
+
 {% block menu %}
 {% include "viewermenu.html" %}
 {% endblock %}
