--- a/templates/base.html
+++ b/templates/base.html
@@ -8,12 +8,10 @@
         <script type="text/javascript" src="/style/jquery-ui.min.js"></script>
         <link rel="StyleSheet" href="/style/flat.css" type="text/css" />
         <script type="text/javascript" src="/style/flat.js"></script> 
-        {% for m,_ in modes %}
-            <link rel="StyleSheet" href="/style/flat.{{ m }}.css" type="text/css" />
-            <script type="text/javascript" src="/style/flat.{{ m }}.js"></script> 
-        {% endfor %}
         {% block head %}
         {% endblock %}
+        <link rel="StyleSheet" href="/style/flat.{{ mode }}.css" type="text/css" />
+        <script type="text/javascript" src="/style/flat.{{ mode }}.js"></script> 
         {% if docid %}
         <script type="text/javascript">
             username = "{{ username|safe }}";
@@ -42,7 +40,7 @@
                 <li>Modes
                 <ul>
                         {% for mode, modename in modes %}
-                        <li><a href="/{{ mode }}/{{ docid }}/">{{ modename }}</a></li>
+                        <li><a href="/{{ mode }}/{{ namespace }}/{{ docid }}/">{{ modename }}</a></li>
                         {% endfor %}
                 </ul>
                 </li>
