--- a/modes/viewer/templates/viewermenu.html
+++ b/modes/viewer/templates/viewermenu.html
@@ -5,10 +5,10 @@
     <li id="views_s"><a href="javascript:setview('s')">Sentences</a></li>
     <li id="views_w"><a href="javascript:setview('w')">Tokens</a></li>
 </ul>
-<li>Annotation View
-<ul id="annotationsviewmenu">
-</ul>
 <li>Annotation Focus
 <ul id="annotationsfocusmenu">
+</ul>
+<li>Annotation Details
+<ul id="annotationsviewmenu">
 </ul>
 </li>
