--- a/modes/editor/templates/editor.html
+++ b/modes/editor/templates/editor.html
@@ -11,7 +11,7 @@
 <li>Tools &amp; Options
 <ul id="toolsandoptions">
     <li><a href="javascript:declare()">Add new Annotation Type</li>
-    <li id="showannotatordetails"><a href="javascript:showannotatordetails()">Show annotator details</li>
+    <li id="toggleannotatordetails"><a href="javascript:toggleannotatordetails()">Show annotator details</li>
 </ul>
 </li>
 {% endblock %}
