--- a/modes/editor/templates/editor.html
+++ b/modes/editor/templates/editor.html
@@ -17,15 +17,15 @@ editforms['{{ editform }}'] = true;
 {% include "viewermenu.html" %}
 <li>Edit Forms
 <ul id="editforms">
-    <li id="editformdirect"><a href="javascript:toggleeditform('direct')">Direct Edit</li>
-    <li id="editformcorrection"><a href="javascript:toggleeditform('correction')">Edit as correction</li>
-    <li id="editformalternative"><a href="javascript:toggleeditform('alternative')">Edit as alternative</li>
+    <li id="editformdirect"><a href="javascript:toggleeditform('direct')">Direct Edit</a></li>
+        <li id="editformcorrection"><a href="javascript:toggleeditform('correction')">Edit as correction</a></li>
+        <li id="editformalternative"><a href="javascript:toggleeditform('alternative')">Edit as alternative</a></li>
 </ul>
 </li>
 <li>Tools &amp; Options
 <ul id="toolsandoptions">
-    <li><a href="javascript:declare()">Add new Annotation Type</li>
-    <li id="toggleannotatordetails"><a href="javascript:toggleannotatordetails()">Show annotator details</li>
+    <li><a href="javascript:declare()">Add new Annotation Type</a></li>
+        <li id="toggleannotatordetails"><a href="javascript:toggleannotatordetails()">Show annotator details</a></li>
 </ul>
 </li>
 {% endblock %}
