--- a/modes/editor/templates/editor.html
+++ b/modes/editor/templates/editor.html
@@ -32,6 +32,9 @@ editforms['{{ editform }}'] = true;
 
 {% block dialogs %}
 <div id="legend"></div>
+<div id="editformcorrectionsetselector">
+Correction set: <select id="editformcorrectionset"></select>
+</div>
 <div id="info"></div>
 <div id="editor">
     <div id="editorheader">
