--- a/style/flat.editor.css
+++ b/style/flat.editor.css
@@ -78,3 +78,12 @@ div.selected span.lbl {
 #editoraddfields, #editortargets {
     display: block;
 }
+div#editformcorrectionsetselector {
+    position: fixed;
+    display: none;
+    width: 160px;
+    left:10px;
+    top: 50px;
+    background: transparent;
+    font-size: 9px;
+}
