--- a/modes/editor/templates/editor.html
+++ b/modes/editor/templates/editor.html
@@ -49,10 +49,10 @@ Correction set: <select id="editformcorrectionset"></select>
         </select>
         <button id="editoraddfield">+</button></span>
         
-        <span id="editortargets">Targets:
+        <span id="editortargets"><label>Targets:</label>
         <select id="editortargetlist">
         </select>
-        <button id="editorselecttarget">Select&gt;</button>
+        <button id="editorselecttarget">Select Multiple&gt;</button>
         </span>
     </div>
     <div class="buttoncontainer">
