--- a/style/flat.editor.css
+++ b/style/flat.editor.css
@@ -88,3 +88,6 @@ div#editformcorrectionsetselector {
     font-size: 9px;
     z-index: -100;
 }
+#editortargets label, #editortargetlist {
+    display: none;
+}
