--- a/modes/editor/templates/editor.html
+++ b/modes/editor/templates/editor.html
@@ -59,6 +59,10 @@ Correction set: <select id="editformcorrectionset"></select>
         <button id="editorsubmit">Ok</button>
     </div>
 </div>
+<div id="newdeclaration" class="dialog">
+    <label>Annotation Type:</label> <select id="newdeclarationannotationtype"></select><br />
+    <label>Set: </label> <input id="newdeclarationset" /> 
+</div>
 {% endblock %}
 
 {% block main %}
