--- a/modes/editor/templates/editor.html
+++ b/modes/editor/templates/editor.html
@@ -67,7 +67,7 @@ Correction set: <select id="editformcorrectionset"></select>
     <label>Annotation Type:</label> <select id="newdeclarationannotationtype"></select><br />
     <label>Set: </label> <input id="newdeclarationset" /> 
     <div class="buttoncontainer">
-        <input id="newdeclarationsubmit" type="submit" value="Add declaration" />
+        <input id="newdeclarationsubmit" type="submit" value="Add declaration" class="button" />
     </div>
 </div>
 {% endblock %}
