added download links

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
     {% for namespace, docsinnamespace in docs %}
         <li><strong>{{ namespace }}</strong><ul>
         {% for doc  in docsinnamespace %}
-            <li><a href="/{{ defaultmode }}/{{ namespace }}/{{ doc }}/">{{ doc }}</a></li>
+        <li><a href="/{{ defaultmode }}/{{ namespace }}/{{ doc }}/">{{ doc }}</a> <span>[<a href="/download/{{ namespace }}/{{ doc }}">Download</a>]</span></li>
         {% endfor %}
         </ul></li>
     {% endfor %}
