--- a/style/flat.css
+++ b/style/flat.css
@@ -67,7 +67,7 @@ div.dialog label {
     width: 20%;
     margin: 5px;
 }
-div.dialog input {
+div.dialog input, div.dialog select {
     display: inline-block;
     width: 70%;
     background: white;
