--- a/templates/login.html
+++ b/templates/login.html
@@ -9,6 +9,11 @@
     <form action="/login/" method="post">
     <label>Username:</label> <input name="username" /><br />
     <label>Password:</label> <input type="password" name="password" /><br/>
+    <label>Configuration:</label> <select name="configuration">
+        {% for conf, confname in configurations %}
+            <option value="{{ conf }}">{{ confname }}</option>
+        {% endfor %}
+    </select></br>
     <div class="buttoncontainer">
         <input class="button" type="submit" value="Log in" />
     </div>
