--- a/modes/editor/templates/editor.html
+++ b/modes/editor/templates/editor.html
@@ -17,15 +17,23 @@ editforms['{{ editform }}'] = true;
 {% include "viewermenu.html" %}
 <li>Edit Forms
 <ul id="editforms">
+    {% if configuration.items.editformdirect %}
     <li id="editformdirect"><a href="javascript:toggleeditform('direct')">Direct Edit</a></li>
-        <li id="editformcorrection"><a href="javascript:toggleeditform('correction')">Edit as correction</a></li>
-        <li id="editformalternative"><a href="javascript:toggleeditform('alternative')">Edit as alternative</a></li>
+    {% endif %}
+    {% if configuration.items.editformcorrection %}
+    <li id="editformcorrection"><a href="javascript:toggleeditform('correction')">Edit as correction</a></li>
+    {% endif %}
+    {% if configuration.items.editformalternative %}
+    <li id="editformalternative"><a href="javascript:toggleeditform('alternative')">Edit as alternative</a></li>
+    {% endif %}
 </ul>
 </li>
 <li>Tools &amp; Options
 <ul id="toolsandoptions">
+    {% if configuration.items.allowdeclare %}
     <li><a href="javascript:declare()">Add new Annotation Type</a></li>
-        <li id="toggleannotatordetails"><a href="javascript:toggleannotatordetails()">Show annotator details</a></li>
+    {% endif %}
+    <li id="toggleannotatordetails"><a href="javascript:toggleannotatordetails()">Show annotator details</a></li>
 </ul>
 </li>
 {% endblock %}
